--- a/templates/hompage.html
+++ b/templates/hompage.html
@@ -1,12 +1,26 @@
+
 <!DOCTYPE html>
 <html lang="en">
+
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>homePage</title>
+    <title>myhomePage</title>
+
 </head>
-<body>
-    
+
+
+<body >
+    <h1>{{data}}</h1>
+    <h1>id is {{id}}</h1>
+      <h1>this heading 1</h1>
+      <h2 style="font-size: 50px;">this heading 2</h2>
+      <h2 style="font-size: 50px;">this heading 2</h2>
+      
 </body>
+
+
+
 </html>
