--- a/car/templates/car/register.html
+++ b/car/templates/car/register.html
@@ -25,7 +25,8 @@
             justify-content: center;
             flex-direction: column;
             margin: 20px 20px 20px 20px;
-            padding: 0px 30px;
+            padding: 0px 60px;
+            border-radius: 30px;
             align-items: center;
             background-color: rgb(236, 96, 96);
         }
@@ -35,6 +36,7 @@
             outline: none;
             border: none;
             padding: 20px;
+            background-color: rgb(100, 78, 78);
         }
 
         .formbtn:hover {
